# Kafka-pet-project-1

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: main.py
app/consumer/: simple_consumer.py
app/producer/: simple_producer.py
app/utils/: generator.py  kafka.py  schema_registry.py
